--- a/JAVA DATABASE TOPICA/JDB Java Basic/nbproject/project.properties
+++ b/JAVA DATABASE TOPICA/JDB Java Basic/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ThanTrieuSwing.jar
+dist.jar=${dist.dir}/JDB_Java_Basic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=thantrieuswing.ThanTrieuSwing
+main.class=jdb.java.basic.JDBJavaBasic
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
