--- a/MyTools/.classpath
+++ b/MyTools/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry excluding="FileExploder/" kind="src" path="src"/>
 	<classpathentry kind="lib" path="Auto Rename.jar"/>
 	<classpathentry kind="lib" path="Book store.jar"/>
 	<classpathentry kind="lib" path="dist/MyTools.jar"/>
